Replace method which is deprecated in java 9